--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -11,7 +11,7 @@
 		quoi bon essayer de limiter le gaspillage et le coût carbone que cela
 		génère si nous reproduisons la même chose ? 
     
-    <br />Nous sommes certains
+   <br /><br />Nous sommes certains
 		que vous comprenez 😊
     
     <br /><br />L'équipe Cycle Zéro ♻️
