--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -9,7 +9,7 @@
 			<br /><br />
 			Comme d'habitude,
 			<span style="font-weight: bold"
-				>premiers arrivés, permiers servis</span
+				>premiers arrivés, premiers servis</span
 			>
 			🙂🌱.
 		</p>
