--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -4,8 +4,7 @@
 		<p>
 			Cycle Zéro débute son année ce lundi 8 janvier 2024 !
 			<br /><br />
-			D'ici quelques jours, vous pourrez de nouveau retrouver nos
-			matériaux de chantier gratuitement.
+			Toutes les semaines, nous mettons des matériaux à disposition. Face à la forte demande, ces derniers partent très vite.
 			<br /><br />
 			Comme d'habitude,
 			<span style="font-weight: bold"
