--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -13,8 +13,8 @@
 			🙂🌱.
 		</p>
 		<img
-			src="https://cyclezero-static-api.github.io/public-static/clientapp/html/guirlandes-2024.gif"
-			style="margin: auto; display: block; width: 60%; margin-top: 15px"
+			src="https://cyclezero-static-api.github.io/public-static/clientapp/html/new-year-2024-icon.png"
+			style="margin: auto; display: block; width: 50%; margin-top: 15px"
 		/>
 		<div
 			style="
