--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -13,7 +13,7 @@
 			🙂🌱.
 		</p>
 		<img
-			src="https://cyclezero-static-api.github.io/public-static/clientapp/html/new-year-2024-icon.png"
+			src="https://cyclezero-static-api.github.io/public-static/clientapp/html/new-year-2024-icon.png?1705683313"
 			style="margin: auto; display: block; width: 50%; margin-top: 15px"
 		/>
 		<div
