--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -1,34 +1,10 @@
 <div style="font-size: 1.2rem; padding: 20px 20px; text-align: justify">
 	<div>
-		<h1 style="text-transform: capitalize">Bonne année 2024 🎉</h1>
-		<p>
-			Cycle Zéro débute son année ce lundi 8 janvier 2024 !
-			<br /><br />
-			Toutes les semaines, nous mettons des matériaux à disposition. Face à la forte demande, ces derniers partent très vite.
-			<br /><br />
-			Comme d'habitude,
-			<span style="font-weight: bold"
-				>premiers arrivés, premiers servis</span
-			>
-			🙂🌱.
-		</p>
-		<img
-			src="https://cyclezero-static-api.github.io/public-static/clientapp/html/new-year-2024-icon.png?1705683313"
-			style="margin: auto; display: block; width: 50%; margin-top: 15px"
-		/>
-		<div
-			style="
-				margin: 25px 0px;
-				background: #ededed;
-				height: 5px;
-				box-sizing: border-box;
-				border-radius: 50px;
-			"
-		></div>
-	</div>
-
-	<div>
 		<h1 style="text-transform: capitalize">à savoir💡</h1>
+		<p>
+			Les matériaux sont réservés très rapidement, premier arrivé, premier servi !
+			<br><br>
+		</p>
 		<p>
 			La géolocalisation s'adapte lors de vos déplacements, donc vous
 			pourrez accéder aux matériaux si vous êtes sur place, dans un rayon
