--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -1,11 +1,11 @@
-<div style="font-size: 1.2rem; padding: 20px 20px; text-align: justify">
+<div style="font-size: 1.2rem; padding: 20px 30px;
+    margin-top: 25px; text-align: justify">
 	<div>
 		<h1 style="text-transform: capitalize">à savoir💡</h1>
 		<p>
 			Les matériaux sont réservés très rapidement, premier arrivé, premier servi !
 			<br><br>
-		</p>
-		<p>
+			
 			La géolocalisation s'adapte lors de vos déplacements, donc vous
 			pourrez accéder aux matériaux si vous êtes sur place, dans un rayon
 			de 100km.
