--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -1,11 +1,31 @@
-<div style="font-size: 1.2rem; padding: 20px 30px;
-    margin-top: 10px; text-align: justify">
+<div
+	style="
+		font-size: 1.2rem;
+		padding: 20px 30px;
+		margin-top: 10px;
+		text-align: justify;
+	"
+>
 	<div>
+		<div style="margin-bottom: 60px">
+			<h1 style="text-transform: capitalize">Nouveauté 💫</h1>
+			<p>Créer des alertes pour être averti des nouvelles annonces.</p>
+			<p style="color: #e01d1d; font-weight: bold">
+				Attention le code postal doit correspondre à votre localisation.
+			</p>
+			<p>
+				<a href="https://youtu.be/b2tJQ8JOlss"
+					>Comment activer les notifications ? ↗</a
+				>
+			</p>
+		</div>
+
 		<h1 style="text-transform: capitalize">à savoir💡</h1>
 		<p>
-			Les matériaux sont réservés très rapidement, premier arrivé, premier servi !
-			<br><br>
-			
+			Les matériaux sont réservés très rapidement, premier arrivé, premier
+			servi !
+			<br /><br />
+
 			La géolocalisation s'adapte lors de vos déplacements, donc vous
 			pourrez accéder aux matériaux si vous êtes sur place, dans un rayon
 			de 100km.
