--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -7,11 +7,14 @@
 	"
 >
 	<div>
-		<div style="margin-bottom: 60px">
+		<div style="margin-bottom: 25px">
 			<h1 style="text-transform: capitalize">Nouveauté 💫</h1>
-			<p>Créer des alertes pour être averti des nouvelles annonces.</p>
-			<p style="color: #e01d1d; font-weight: bold">
-				Attention le code postal doit correspondre à votre localisation.
+			<p>
+				Créer des alertes pour être averti des nouvelles annonces.
+				<span style="color: #e01d1d; font-weight: bold; display: block">
+					Attention le code postal doit correspondre à votre
+					localisation.
+				</span>
 			</p>
 			<p>
 				<a href="https://youtu.be/b2tJQ8JOlss"
