--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -17,7 +17,7 @@
 				</span>
 			</p>
 			<p>
-				<a href="https://youtu.be/b2tJQ8JOlss"
+				<a href="https://youtu.be/dLxOT4RVgVY"
 					>Comment activer les notifications ? ↗</a
 				>
 			</p>
