--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -8,7 +8,7 @@
 >
 	<div>
 		<div style="margin-bottom: 25px">
-			<h1 style="text-transform: capitalize; color: #2f3939; font-size: 25px; font-weight: normal;">Nouveauté 💫</h1>
+			<h1 style="color: #252d2d; font-size: 24px; font-weight: normal;">Nouveauté 💫</h1>
 			<p>
 				Créer des alertes pour être averti des nouvelles annonces.
 				<span style="color: #e01d1d; font-weight: bold; display: block">
@@ -23,7 +23,7 @@
 			</p>
 		</div>
 
-		<h1 style="text-transform: capitalize; color: #2f3939; font-size: 25px; font-weight: normal;">à savoir💡</h1>
+		<h1 style="color: #252d2d; font-size: 24px; font-weight: normal;">À savoir💡</h1>
 		<p>
 			Les matériaux sont réservés très rapidement, premier arrivé, premier
 			servi !
