--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -9,7 +9,7 @@
 	<div>
 		<div style="margin-bottom: 25px">
 			<h1 style="color: #252d2d; font-size: 24px; font-weight: normal;">Nouveauté 💫</h1>
-			<p>
+			<p style="color: #2f3939;">
 				Créer des alertes pour être averti des nouvelles annonces.
 				<span style="color: #e01d1d; font-weight: bold; display: block">
 					Attention le code postal doit correspondre à votre
@@ -24,7 +24,7 @@
 		</div>
 
 		<h1 style="color: #252d2d; font-size: 24px; font-weight: normal;">À savoir💡</h1>
-		<p>
+		<p style="color: #2f3939;">
 			Les matériaux sont réservés très rapidement, premier arrivé, premier
 			servi !
 			<br /><br />
