--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -12,8 +12,8 @@
 			Cher cycleur, cher professionnel,
 			<br /><br />
 
-      Le SAV sera indisponible à partir du 11 août jusqu'au 25 août 2025.
-      Les validations de comptes ainsi que les réservations de matériaux et leur publication seront restreintes.
+Le service après-vente (SAV) sera indisponible du 11 août au 25 août 2025.
+Pendant cette période, la validation et l’activation de nouveaux comptes professionnels seront suspendues.
 
 			<br /><br />
       Merci pour votre compréhension, nous vous souhaitons à tous d'agréable vacances estivales !
