--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -1,5 +1,10 @@
 <div>
-  <b>
+    <br />
+    <br />
+  <h2>Informations ℹ️</h2>
+      <br />
+    <br />
+  <p style="font-size: 18px">
     Beaucoup de monde utilise la plateforme en ce moment, ce qui peut entraîner quelques ralentissements ou coupures temporaires.
     <br />Merci pour votre patience et compréhension.
     <br />
@@ -11,5 +16,5 @@
     <br />
     <br />
     L'équipe Cycle Zéro.
-  </b>
+  </p>
 </div>
