Clean up line breaks in onstart-info-persistent.html
Removed extra line breaks for cleaner layout.

--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -1,10 +1,9 @@
 <div>
-    <br />
-    <br />
+<br />
+  
   <h2>Informations ℹ️</h2>
-      <br />
-    <br />
-  <p style="font-size: 18px">
+<br />
+  <p style="font-size: 18px; margin: 5px;">
     Beaucoup de monde utilise la plateforme en ce moment, ce qui peut entraîner quelques ralentissements ou coupures temporaires.
     <br />Merci pour votre patience et compréhension.
     <br />
