Reformat building company message in HTML

--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -2,7 +2,6 @@
 <br />
   
   <h2>Informations ℹ️</h2>
-<br />
   <p style="font-size: 18px; margin: 5px;">
     Beaucoup de monde utilise la plateforme en ce moment, ce qui peut entraîner quelques ralentissements ou coupures temporaires.
     <br />Merci pour votre patience et compréhension.
@@ -11,7 +10,9 @@
     Pour voir les nouveaux matériaux dès leur publication et ne rien manquer, pensez à vous abonner à notre compte Instagram.
     <br />
     <br />
-    Vous êtes une entreprise du bâtiment ?\nTéléchargez l'application Cycle Zéro et pensez à déposer vos matériaux sur l'application.
+    Vous êtes une entreprise du bâtiment ?
+    <br />
+    Téléchargez l'application Cycle Zéro et pensez à déposer vos matériaux sur l'application.
     <br />
     <br />
     L'équipe Cycle Zéro.
