Enhance onstart-info HTML structure and styling

--- a/clientapp/html/onstart-info-persistent-desactivated-3.html
+++ b/clientapp/html/onstart-info-persistent-desactivated-3.html
@@ -1,20 +1,87 @@
-<div>
-<br />
-  
-  <h2>Informations ℹ️</h2>
-  <p style="font-size: 18px; margin: 5px;">
-    Beaucoup de monde utilise la plateforme en ce moment, ce qui peut entraîner quelques ralentissements ou coupures temporaires.
-    <br />Merci pour votre patience et compréhension.
-    <br />
-    <br />
-    Pour voir les nouveaux matériaux dès leur publication et ne rien manquer, pensez à vous abonner à notre compte Instagram.
-    <br />
-    <br />
-    Vous êtes une entreprise du bâtiment ?
-    <br />
-    Téléchargez l'application Cycle Zéro et pensez à déposer vos matériaux sur l'application.
-    <br />
-    <br />
-    L'équipe Cycle Zéro.
+<div style="padding:16px;">
+
+  <h2 style="
+    font-size:22px;
+    font-weight:700;
+    text-align:center;
+    margin-bottom:16px;
+    color:#111827;
+  ">
+    Informations ℹ️
+  </h2>
+
+  <p style="
+    font-size:16px;
+    line-height:24px;
+    margin-bottom:14px;
+    color:#374151;
+    text-align:center;
+  ">
+    Beaucoup de monde utilise la plateforme en ce moment, ce qui peut entraîner
+    quelques ralentissements ou coupures temporaires.
   </p>
+
+  <p style="
+    font-size:16px;
+    line-height:24px;
+    margin-bottom:18px;
+    color:#374151;
+    text-align:center;
+  ">
+    Merci pour votre patience et votre compréhension 🙏
+  </p>
+
+  <hr style="
+    height:1px;
+    background-color:#E5E7EB;
+    margin:16px 0;
+  " />
+
+  <p style="
+    font-size:16px;
+    line-height:24px;
+    margin-bottom:16px;
+    color:#374151;
+    text-align:center;
+  ">
+    Pour voir les nouveaux matériaux dès leur publication et ne rien manquer,
+    pensez à vous abonner à notre compte
+    <span style="color:#2563EB;font-weight:600;">
+      Instagram
+    </span>.
+  </p>
+
+  <hr style="
+    height:1px;
+    background-color:#E5E7EB;
+    margin:16px 0;
+  " />
+
+  <p style="
+    font-size:16px;
+    line-height:24px;
+    margin-bottom:16px;
+    color:#374151;
+    text-align:center;
+  ">
+    <strong style="color:#111827;">
+      Vous êtes une entreprise du bâtiment ?
+    </strong>
+    <br />
+    Téléchargez l’application
+    <strong style="color:#111827;">
+      Cycle Zéro
+    </strong>
+    et pensez à déposer vos matériaux.
+  </p>
+
+  <p style="
+    font-size:15px;
+    color:#6B7280;
+    text-align:center;
+    margin-top:12px;
+  ">
+    — L’équipe Cycle Zéro ♻️
+  </p>
+
 </div>
