--- a/clientapp/html/onstart-info-persistent-desactivated-3.html
+++ b/clientapp/html/onstart-info-persistent-desactivated-3.html
@@ -46,9 +46,9 @@
   ">
     Pour voir les nouveaux matériaux dès leur publication et ne rien manquer,
     pensez à vous abonner à notre compte
-    <span style="color:#2563EB;font-weight:600;">
+    <a style="color:#2563EB;font-weight:600;" href="https://www.instagram.com/cyclezero.app/">
       Instagram
-    </span>.
+    </a>.
   </p>
 
   <hr style="
