--- a/clientapp/html/onstart-info-persistent.html
+++ b/clientapp/html/onstart-info-persistent.html
@@ -46,7 +46,7 @@
   ">
     Pour voir les nouveaux matériaux dès leur publication et ne rien manquer,
     pensez à vous abonner à notre compte
-    <a style="color:#2563EB;font-weight:600;" href="https://www.instagram.com/cyclezero.app/" target="_blank">
+    <a style="color:#2563EB;font-weight:600;" href="https://www.instagram.com/cyclezero.app?igsh=MWF2d3k1NnR1YW5idw" target="_blank">
       Instagram
     </a>.
   </p>
